[package]
edition = "2021"
name = "qrstats-worker"
version = "0.1.0"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.17"

[profile.release]
codegen-units = 1
lto = true
strip = true
