[package]
description = "a cloudflare worker designed to host a webapp that allows for tracking url redirects"
edition = "2021"
name = "qrstats"
version = "0.1.0"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = {version = "0.2.12", features = ["js"]}
log = "0.4.20"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
url_encoded_data = "0.6.1"
uuid = {version = "1.7.0", features = ["v4", "fast-rng"]}
worker = "0.0.17"

[profile.release]
codegen-units = 1
lto = true
strip = true
